--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darts</title>
     <!-- Automatische Weiterleitung zur Startseite nach 0 Sekunden -->
-    <meta http-equiv="refresh" content="0; url='/Dart/'" />
+    <meta http-equiv="refresh" content="0; url='/Darts/'" />
 </head>
 <body>
     <h1>Redirecting...</h1>
